# lollol

./: .flake8  .gitignore  README.rst  mypy.ini  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: test.yml
example/: auth_per_app.py  auth_per_function.py  auth_per_router.py
lollol/: __init__.py  _authorize.py  _exceptions.py  _utils.py
scripts/: lint.sh  tests.sh
src/lollol/: __init__.py  _authorize.py  _exceptions.py  _helpers.py  _utils.py
tests/: __init__.py  test_auth_app.py  test_auth_decorator.py  test_auth_router.py  test_cannot_permitted_router.py  test_extra_secret_key.py  test_initialize_permission.py  test_permission_check.py
